# otter

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  ANNEXB_EVAL_NEXT_STEPS.md  AOT_TYPED_REPRESENTATION_IDEAS.md  ARCHITECTURE.md  CLAUDE.md  CRANELIFT_TIER2.md  Cargo.toml  DEBUG_TRACE_PROFILING_PLAN.md  Dockerfile  ENGINE_ARCH_REWORK.md  ENGINE_PERF_AUDIT.md  ENGINE_REFACTOR_EXECUTION_PLAN.md  ENGINE_REWORK_TRACKING_PLAN.md  ERROR_MODEL_DESIGN.md  ES_CONFORMANCE.md  EXTENSION_API_PLAN.md  FFI_SAFETY.md  HANDLE_SCOPE_PLAN.md  JIT_DESIGN.md  JIT_PLAN.md  JIT_REFACTOR_PLAN.md  JIT_REGMAP_SAFEPOINTS_DESIGN.md  JIT_TOPLEVEL_LOOP_FINDINGS.md  Justfile  LICENSE  NATIVE_VM_ABI_PLAN.md  NEW_ENGINE_FOUNDATION_PLAN.md  NEXT_SESSION.md  NODE_COMMONJS_DESIGN.md  NODE_CONFORMANCE.md  NODE_MODULE_ABI_DESIGN.md  OPTIMIZING_TIER.md  OTTER_BUILTINS_RUST_PLAN.md  OTTER_ENGINE_REFACTOR_PROGRESS.md  OTTER_PLAN.md  OTTER_VM_SPEC.md  PRODUCTION_READINESS_PLAN.md  (+33 more)
crates-legacy/otter-node-compat/: Cargo.toml
crates-legacy/otter-node-compat/src/: main.rs
crates-legacy/otter-nodejs/: Cargo.toml
crates-legacy/otter-nodejs/src/: assert.rs  child_process.rs  lib.rs  module_registry.rs  node_test.rs  process.rs  support.rs  url.rs
crates-legacy/otter-pm-lockfile/: Cargo.toml
crates-legacy/otter-pm-lockfile/src/: bun.rs  otter.rs  pnpm.rs
crates-next/otter-compiler/: Cargo.toml
crates-next/otter-compiler/src/: capture.rs  lib.rs
crates-next/otter-gc/: Cargo.toml
crates-next/otter-gc/benches/: bench_alloc_with_barrier.rs  bench_card_table_dirty_scan.rs  bench_pointer_compress_decompress.rs
crates-next/otter-gc/src/: branded.rs  compressed.rs  devtools_snapshot.rs  external.rs  handle.rs  heap.rs  lib.rs  oom.rs  page.rs  scavenger.rs  space.rs  stats.rs  store.rs  trace.rs
crates-next/otter-gc/tests/: black_allocation.rs  book_gc_api_examples.rs  card_table.rs  compressed_pointers.rs  cycles.rs  devtools_snapshot.rs  miri_smoke.rs  oom_emergency_collect_recovers.rs  scavenger.rs  snapshot_finds_root_to_leaf.rs  stats_round_trip.rs  trace_table.rs
crates-next/otter-macros/: Cargo.toml
crates-next/otter-macros/src/: lib.rs
crates-next/otter-macros/tests/: js_namespace.rs
crates-next/otter-runtime/: Cargo.toml
crates-next/otter-runtime/benches/: startup.rs
crates-next/otter-runtime/src/: error.rs  event_loop.rs  handle.rs  lib.rs  module_graph.rs  module_loader.rs  structured_clone.rs  worker.rs
crates-next/otter-runtime/tests/: compile_fail.rs  gc_upvalue_cycle.rs  runtime_heap_stats_visible.rs  runtime_oom_surfaces_as_error.rs
crates-next/otter-test262/: Cargo.toml  README.md
crates-next/otter-test262/src/: diff.rs  feature_map.rs  harness.rs  isolation.rs  lib.rs  main.rs  metadata.rs  report.rs  runner.rs  shard.rs
crates-next/otter-vm/: Cargo.toml
crates-next/otter-vm/benches/: bootstrap.rs  dispatch.rs
crates-next/otter-vm/src/: abstract_ops.rs  array.rs  array_prototype.rs  array_statics.rs  atomics.rs  bootstrap.rs  collections.rs  collections_prototype.rs  console.rs  error_classes.rs  gc_trace.rs  generator.rs  intrinsics.rs  js_surface.rs  lib.rs  microtask.rs  native_function.rs  number.rs  object.rs  object_statics.rs  promise.rs  promise_dispatch.rs  proxy.rs  reflect.rs  regexp.rs  regexp_prototype.rs  runtime_cx.rs  runtime_state.rs  string.rs  string_prototype.rs  symbol_prototype.rs  weak_refs.rs
crates-next/otter-vm/tests/: compile_fail.rs  gc_array_cycle.rs  gc_map_self_value.rs  gc_phase1_regressions.rs  gc_roots.rs  gc_weakref_finalization.rs
crates/jsc-sys/: Cargo.toml  Dockerfile  README.md  build.rs
crates/jsc-sys/src/: lib.rs
crates/otter-benchmark/: Cargo.toml
crates/otter-benchmark/src/: lib.rs  main.rs  process.rs
crates/otter-bytecode/: Cargo.toml
crates/otter-bytecode/src/: bytecode_v2.rs  disasm.rs  dump.rs  encoding.rs  lib.rs  method_id.rs  opcode_audit.rs  opcode_schema.rs  wordcode.rs
crates/otter-cli/: Cargo.toml  README.md  build.rs
crates/otter-cli/benches/: cold_start.rs
crates/otter-cli/src/: config.rs  error_render.rs  execution_config.rs  main.rs
crates/otter-cli/tests/: cjs_entry_capability.rs  dump_bytecode.rs  execution_config.rs  install_graph.rs  jit_loop_invariants.rs  json_diagnostics_per_category.rs  node_events.rs  node_fs.rs  node_napi.rs  node_path.rs  node_url.rs  node_util.rs  run_unified_path.rs
crates/otter-difftest/: Cargo.toml
crates/otter-difftest/corpus/: allocation_gc.js  arithmetic.js  arrays_typed.js  calls_recursion.js  closures.js  effect_order.js  exceptions_finally.js  generator-bootstrap.js  inline_scratch_semantics.js  iterator-symbol-bootstrap.js  object_properties.js  prototype_invalidation.js  regexp-symbol-bootstrap.js
crates/otter-difftest/src/: main.rs
crates/otter-engine/: CHANGELOG.md  Cargo.toml  README.md
crates/otter-engine/src/: capabilities.rs  console.rs  dynamic_import.rs  env_store.rs  error.rs  graph.rs  lib.rs  loader.rs  node_builtins.rs
crates/otter-engine/tests/: arguments_e2e.rs  class_inheritance_e2e.rs  generator_e2e.rs  mixed_graph_interop.rs  mixed_graph_runtime_interop.rs  node_api_parity.rs  node_imports.rs  node_profiles.rs  node_security.rs  web_api_abort_and_timers.rs
crates/otter-ffi/: Cargo.toml  build.rs
crates/otter-ffi/src/: call.rs  error.rs  extension.rs  lib.rs  library.rs  pointer.rs  types.rs
crates/otter-ffi/test_lib/: test_ffi.c
crates/otter-ffi/tests/: test_native_call.rs
crates/otter-gc/: Cargo.toml
crates/otter-gc/benches/: bench_alloc_with_barrier.rs  (+5 more)
crates/otter-jit/: Cargo.toml  build.rs
crates/otter-jsc-core/: CHANGELOG.md  Cargo.toml  README.md
crates/otter-kv/: Cargo.toml
crates/otter-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/otter-modules/: Cargo.toml  build.rs
crates/otter-node/: CHANGELOG.md  Cargo.toml  README.md
crates/otter-node-compat/: Cargo.toml
crates/otter-nodejs/: Cargo.toml
crates/otter-pm/: CHANGELOG.md  Cargo.toml  README.md
crates/otter-pm-lockfile/: Cargo.toml
crates/otter-pm-manifest/: Cargo.toml
jit-proto/: Cargo.toml
jit-proto/src/: main.rs
(+2820 files in other folders)
