[workspace]
resolver = "3"
members = [
    "crates/otter-bytecode",
    "crates/otter-syntax",
    "crates/otter-compiler",
    "crates/otter-gc",
    "crates/otter-macros",
    "crates/otter-vm",
    "crates/otter-runtime",
    "crates/otter-test",
    "crates/otter-test262",
    "crates/otter-cli",
    "crates/otter-modules",
    "crates/otter-web",
]
exclude = [
    "crates-legacy/*",
]

[workspace.package]
edition = "2024"
publish = false
license = "MIT"

[workspace.dependencies]
oxc_allocator   = "0.129"
oxc_span        = "0.129"
oxc_syntax      = "0.129"
oxc_ast         = "0.129"
oxc_parser      = "0.129"
oxc_ast_visit   = "0.129"
oxc_diagnostics = "0.129"
oxc_codegen     = "0.129"
oxc_resolver    = "11.19"

# Errors and serialization.
thiserror   = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.9"

# CLI / diagnostics / tracing.
clap                = { version = "4", features = ["derive"] }
miette              = { version = "7", features = ["fancy"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
tokio               = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Collections / utilities.
smallvec    = "1"
indexmap    = "2"
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full", "parsing", "printing"] }

# Arbitrary-precision integers for `Value::BigInt`.
num-bigint  = "0.4"
num-traits  = "0.2"

temporal_rs = { version = "0.2.3", features = ["sys-local"] }

icu_collator = { version = "2.1", features = ["compiled_data"] }
icu_decimal  = { version = "2.1", features = ["compiled_data"] }
icu_datetime = { version = "2.1", features = ["compiled_data"] }
icu_locale   = { version = "2.1", features = ["compiled_data"] }
icu_calendar = { version = "2.1", features = ["compiled_data"] }
icu_experimental = { version = "0.5", features = ["compiled_data"] }
fixed_decimal = "0.7"
writeable     = "0.6"

regress     = { git = "https://github.com/octoshikari/regress", features = ["utf16"] }

# Benchmarks.
criterion   = { version = "0.8", features = ["html_reports"] }

# Workspace-internal crates.
otter-bytecode  = { path = "crates/otter-bytecode" }
otter-syntax    = { path = "crates/otter-syntax" }
otter-compiler  = { path = "crates/otter-compiler" }
otter-gc        = { path = "crates/otter-gc" }
otter-macros    = { path = "crates/otter-macros" }
otter-vm        = { path = "crates/otter-vm" }
otter-runtime   = { path = "crates/otter-runtime" }
otter-test      = { path = "crates/otter-test" }
otter-web       = { path = "crates/otter-web" }

[workspace.lints.rust]
unsafe_code         = "forbid"
missing_docs        = "deny"

[workspace.lints.clippy]
all                 = { level = "deny", priority = -1 }

# Optimized release profile for the new foundation engine.
[profile.release]
lto = "thin"
codegen-units = 1
strip = false
panic = "unwind"
opt-level = 3

# Fast release for development iteration.
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
strip = false

# Dev profile keeps debug info for flamegraph / lldb work.
[profile.dev]
debug = true
strip = false
