[workspace]
resolver = "3"
members = [
    "crates/otter-bytecode",
    "crates/otter-syntax",
    "crates/otter-compiler",
    "crates/otter-gc",
    "crates/otter-regex",
    "crates/otter-macros",
    "crates/otter-vm",
    "crates/otter-vm-codegen",
    "crates/otter-jit",
    "crates/otter-runtime",
    "crates/otter-pm-manifest",
    "crates/otter-pm-lockfile",
    "crates/otter-pm",
    "crates/otter-test",
    "crates/otter-test262",
    "crates/otter-cli",
    "crates/otter-modules",
    "crates/otter-node",
    "crates/otter-node-compat",
    "crates/otter-web",
]
exclude = [
    "crates-legacy/*",
]

[workspace.package]
edition = "2024"
publish = false
license = "MIT"

[workspace.dependencies]
rustc-hash      = "2.1"
oxc_allocator   = "0.136"
oxc_span        = "0.136"
oxc_syntax      = "0.136"
oxc_ast         = "0.136"
oxc_parser      = "0.136"
oxc_ast_visit   = "0.136"
oxc_diagnostics = "0.136"
oxc_codegen     = "0.136"
oxc_resolver    = "11.19"

# Errors and serialization.
anyhow      = "1"
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
glob        = "0.3"
libc        = "0.2"
thiserror   = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
toml        = "0.9"
semver      = "1"
base64      = "0.22"
sha2        = "0.10"
reqwest     = { version = "0.13.3", default-features = false, features = ["rustls", "http2", "json", "gzip"] }
flate2      = "1.1.9"
tar         = "0.4.45"

# CLI / diagnostics / tracing.
clap                = { version = "4", features = ["derive"] }
miette              = { version = "7", features = ["fancy"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
tokio               = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs", "io-util", "process", "net"] }

# Collections / utilities.
smallvec    = "1"
indexmap    = "2"
elsa        = "1.11"
globset     = "0.4"
sysinfo     = "0.39"
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full", "parsing", "printing"] }

# Arbitrary-precision integers for `Value::BigInt`.
num-bigint  = "0.4"
num-traits  = "0.2"

temporal_rs = { version = "0.2.3", features = ["sys-local", "compiled_data"] }

icu_collator = { version = "2.1", features = ["compiled_data"] }
icu_normalizer = { version = "2.1", features = ["compiled_data"] }
icu_decimal  = { version = "2.1", features = ["compiled_data"] }
icu_datetime = { version = "2.1", features = ["compiled_data"] }
icu_locale   = { version = "2.1", features = ["compiled_data"] }
icu_calendar = { version = "2.1", features = ["compiled_data"] }
icu_experimental = { version = "0.5", features = ["compiled_data"] }
fixed_decimal = "0.7"
writeable     = "0.6"

# Benchmarks.
criterion   = { version = "0.8", features = ["html_reports"] }

# Workspace-internal crates.
otter-bytecode  = { path = "crates/otter-bytecode" }
otter-syntax    = { path = "crates/otter-syntax" }
otter-compiler  = { path = "crates/otter-compiler" }
otter-gc        = { path = "crates/otter-gc" }
otter-jit       = { path = "crates/otter-jit" }
otter-regex     = { path = "crates/otter-regex" }
otter-macros    = { path = "crates/otter-macros" }
otter-vm        = { path = "crates/otter-vm" }
otter-runtime   = { path = "crates/otter-runtime" }
otter-modules   = { path = "crates/otter-modules" }
otter-node      = { path = "crates/otter-node" }
otter-pm-manifest = { path = "crates/otter-pm-manifest" }
otter-pm-lockfile = { path = "crates/otter-pm-lockfile" }
otter-pm       = { path = "crates/otter-pm" }
otter-test      = { path = "crates/otter-test" }
otter-web       = { path = "crates/otter-web" }

[workspace.lints.rust]
unsafe_code         = "forbid"
missing_docs        = "deny"

[workspace.lints.clippy]
all                 = { level = "deny", priority = -1 }
# Design-style lints that flag working code as a stylistic
# preference rather than a real defect. Boxing every `Err`
# would touch ~36 call sites for a pure-cosmetic gain; the
# argument-count and type-complexity caps are similarly
# subjective. Allow them workspace-wide so `clippy --all -D
# warnings` stays a useful gate for genuine issues.
result_large_err    = "allow"
too_many_arguments  = "allow"
type_complexity     = "allow"
# The engine is single-threaded by design (one isolate per thread,
# NaN-boxed non-Send `Value`). `Arc` is used purely for cheap shared
# refcounting within that thread; the Send+Sync bound the lint wants
# is neither achievable nor needed here.
arc_with_non_send_sync = "allow"

# Optimized release profile for the new foundation engine.
[profile.release]
lto = "thin"
codegen-units = 1
strip = false
panic = "unwind"
opt-level = 3
debug = 1
force-frame-pointers = true

# Fast release for development iteration.
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
strip = false

# Dev profile keeps debug info for flamegraph / lldb work.
[profile.dev]
debug = true
strip = false
