[package]
name = "jit-proto"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone (NOT a workspace member) — throwaway §3.2 backend prototype gate.
# Lives outside the otter workspace so it never perturbs `cargo build` or the
# workspace `forbid(unsafe_code)` lint. Delete after the gate is recorded.
[workspace]

[dependencies]
dynasm = "3"
dynasmrt = "3"

[profile.release]
opt-level = 3
