[package]
name = "otter-node-compat"
version = "0.1.0"
edition = "2024"
description = "Node.js compatibility runner for the active Otter runtime stack"
license = "MIT"
autotests = false
publish = false

[lib]
doctest = false

[[bin]]
name = "node-compat"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
