[package]
name = "otter-nodejs"
version = "0.1.0"
edition = "2024"
description = "Node.js compatibility surfaces for the active Otter runtime stack"
license = "MIT"

[dependencies]
otter-runtime = { path = "../otter-runtime" }
otter-macros = { path = "../otter-macros" }
otter-vm = { path = "../otter-vm" }
libc = "0.2"
