[package]
name = "otter-pm-lockfile"
version = "0.1.0"
edition = "2024"
description = "Canonical lockfile graph + multi-format adapters (pnpm/npm/yarn/bun) for Otter's package manager"
license = "MIT"
repository = "https://github.com/octofhir/otter"
autotests = false

[lib]
doctest = false

[dependencies]
otter-pm-manifest = { path = "../otter-pm-manifest" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror.workspace = true
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
