[package]
name = "otter-compiler"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
rust-version.workspace = true
description = "AST → bytecode lowering for the Otter foundation engine."

[lints]
workspace = true

[dependencies]
otter-bytecode = { workspace = true }
otter-syntax = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
