[package]
name = "otter-gc"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Production-grade page-based generational tracing GC for the Otter new-engine VM."

[lints.rust]
# `unsafe_code` ban lifted for this crate per ADR-0004 (which amends
# ADR-0001 §5). Every other `crates-next/*` crate keeps the workspace
# `forbid(unsafe_code)`. See docs/new-engine/adr/0004-gc-crate-and-unsafe-boundary.md.
missing_docs = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
thiserror = { workspace = true }
