[package]
name = "otter-macros"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Zero-cost JavaScript surface macros for Otter."

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
otter-vm = { workspace = true }

[[bench]]
name = "js_surface_macros"
harness = false
