[package]
name = "otter-runtime"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Public embedding API for the Otter foundation engine."

[lints]
workspace = true

[dependencies]
otter-bytecode = { workspace = true }
otter-compiler = { workspace = true }
otter-syntax = { workspace = true }
otter-vm = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_allocator = { workspace = true }
oxc_resolver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
