[package]
name = "otter-vm"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Interpreter and value model for the Otter foundation engine."

[lints]
workspace = true

[dependencies]
otter-bytecode = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
indexmap = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
regress = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "dispatch"
harness = false
