[package]
name = "otter-bytecode"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Otter foundation bytecode container, opcode set, disassembler, and JSON dump."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
oxc_span = { workspace = true }
