[package]
name = "otter-cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Otter foundation CLI (`otter` binary)."

[[bin]]
name = "otter"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
otter-bytecode = { workspace = true }
otter-compiler = { workspace = true }
otter-pm = { workspace = true }
otter-pm-lockfile = { workspace = true }
otter-pm-manifest = { workspace = true }
otter-runtime = { workspace = true }
otter-test = { workspace = true }
otter-web = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "cold_start"
harness = false
