[package]
name = "otter-cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Otter foundation CLI (`otter` binary)."

[[bin]]
name = "otter"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
otter-bytecode = { workspace = true }
otter-compiler = { workspace = true }
otter-modules = { workspace = true }
otter-node = { workspace = true }
otter-pm = { workspace = true }
otter-pm-lockfile = { workspace = true }
otter-pm-manifest = { workspace = true }
otter-runtime = { workspace = true }
otter-web = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
oxc_diagnostics = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "cold_start"
harness = false
