[package]
name = "otter-difftest"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Process-isolated interpreter/baseline/GC differential runner for Otter."

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "otter-difftest"
path = "src/main.rs"
