[package]
name = "otter-engine"
version = "0.1.3"
edition = "2024"
description = "Otter JavaScript engine"
license = "MIT"
repository = "https://github.com/octofhir/otter"
homepage = "https://github.com/octofhir/otter"
keywords = ["typescript", "javascript", "runtime", "engine", "vm"]
categories = ["development-tools", "compilers"]
readme = "README.md"

[dependencies]
# VM crates (re-exported for convenience)
otter-vm-runtime = { path = "../otter-vm-runtime" }
otter-vm-core = { path = "../otter-vm-core" }
otter-vm-compiler = { path = "../otter-vm-compiler" }
otter-vm-bytecode = { path = "../otter-vm-bytecode" }
otter-nodejs = { path = "../otter-nodejs" }

# Own dependencies
tokio = { version = "1", features = ["rt", "sync", "fs", "net", "time", "macros"] }
reqwest = { version = "0.13", features = ["rustls"], default-features = false }
oxc_resolver = "11.16"
dirs = "6.0"
md5 = "0.8"
regex = "1"
dashmap = "6.1"
futures-util = "0.3"
http = "1.3"
hyper = { version = "1.6", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto"] }
http-body-util = "0.1"
bytes = "1.10"
tokio-tungstenite = "0.28"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
socket2 = "0.6"
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
