[package]
name = "otter-ffi"
version = "0.1.0"
edition = "2024"
description = "FFI (Foreign Function Interface) backend for Otter VM"
license = "MIT"

[dependencies]
libloading = "0.8"
libffi = "4"
libc = "0.2"
thiserror = { workspace = true }
otter-vm-core = { path = "../otter-vm-core" }
otter-vm-runtime = { path = "../otter-vm-runtime" }
otter-macros = { path = "../otter-macros" }
