[package]
name = "otter-jit"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Baseline JIT for the Otter VM: Sparkplug-style template macro-assembler (bytecode → machine code) with no IR, no deopt, and reused interpreter-frame rooting."

# `unsafe_code` ban lifted for this crate (mirrors otter-gc): a JIT must mmap
# W^X executable memory and transmute emitted bytes to function pointers. All
# `unsafe` is encapsulated here behind a safe API; otter-vm keeps the workspace
# `forbid(unsafe_code)` and reaches the JIT through a trait hook (no cycle).
# See JIT_DESIGN.md §3.2.
[lints.rust]
missing_docs = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
otter-bytecode = { workspace = true }
otter-vm = { workspace = true }
rustc-hash = { workspace = true }
# Template macro-assembler chosen by the §3.2 prototype gate (M1/M2 confirmed
# toolchain + latency + codegen on arm64). x86_64 emitter follows arm64.
dynasm = "5"
dynasmrt = "5"

[dev-dependencies]
