[package]
name = "otter-jit"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Native JIT tiers for the Otter VM with direct baseline lowering and backend-independent optimizing analyses."

# `unsafe_code` ban lifted for this crate (mirrors otter-gc): a JIT must mmap
# W^X executable memory and transmute emitted bytes to function pointers. All
# `unsafe` is encapsulated here behind a safe API; otter-vm keeps the workspace
# `forbid(unsafe_code)` and reaches the JIT through a trait hook (no cycle).
# See JIT_DESIGN.md §3.2.
[lints.rust]
missing_docs = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
otter-bytecode = { workspace = true }
otter-vm = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
# Template macro-assembler chosen by the §3.2 prototype gate (M1/M2 confirmed
# toolchain + latency + codegen on arm64). x86_64 emitter follows arm64.
dynasm = "5"
dynasmrt = "5"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-native = { workspace = true }
yaxpeax-arch = { workspace = true }
yaxpeax-arm = { workspace = true }

[dev-dependencies]
